--- a/config.toml
+++ b/config.toml
@@ -12,18 +12,18 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[menu.main]]
     name = "About"
     url = "/about/"
+
 [[menu.main]]
-    name = "GitHub"
-    url = "https://github.com/xinluwang/"
+    name = "Research"
+    url = "/Research/"
+
 [[menu.main]]
     name = "Teaching"
     url = "/Teaching/"
-[[menu.main]]
-    name = "Projects"
-    url = "/projects/"
+
 
 [params]
-    description = "A place for sharing thoughts on data analysis"
+    description = "A personal website for sharing thoughts on Teaching and Research"
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.11.0"
