--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 
 [params]
-    description = "A personal website for sharing thoughts on Teaching and Research"
+    description = "A personal website for Research, Teaching, and Data Analysis"
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.11.0"
