--- a/config.toml
+++ b/config.toml
@@ -27,13 +27,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.11.0"
     highlightjsCDN = "//cdn.bootcss.com"
-    highlightjsLang = ["r", "yaml"]
+    highlightjsLang = ["r", "python", "yaml"]
     highlightjsTheme = "github"
     MathJaxCDN = "//cdn.bootcss.com"
     MathJaxVersion = "2.7.1"
 
     [params.logo]
-    url = "/images/logo.jpg"
+    url = "/./images/logo.jpg"
     width = 50
     height = 50
     alt = "Logo"
