--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.1"
 
     [params.logo]
-    url = "/./images/logo.jpg"
+    url = "/images/logo.jpg"
     width = 50
     height = 50
     alt = "Logo"
